# 36120-AT1-Group5

./: 25605217_tabnet.py  DJ Trump 4.csv  DJ Trump 5.csv  DJ Trump 6.csv  DJ Trunmp 3.csv  classification_demo.py  train_lightgbm_25605217.py  train_lightgbm_catboost_25605217.py
25235490/: pyproject.toml
25235490/my_utils_asm1.2/: pyproject.toml
25235490/my_utils_asm1.2/tests/: __init__.py
25235490/my_utils_new/: pyproject.toml
25235490/notebooks/: 36120-25SP-AT1-group5-25235490-experiment-1.ipynb  36120-25SP-AT1-group_5-25235490-experiment2.ipynb
25408877/: ReadMe.txt
25528668/: 36120-25SP-AT1-group_id-25528668-experiment.ipynb  Untitled2.ipynb  activate env.txt  baseline_logreg_pipeline.joblib  metadata.csv  pyproject.toml  sample_submission.csv  submission.csv  submission_baseline.csv  submission_baseline_logreg.csv  wfh.csv
25528668/.ipynb_checkpoints/: 36120-25SP-AT1-group_id-25528668-experiment-checkpoint.ipynb
25605217/: LICENSE  README.md  pyproject.toml  requirements.txt
25605217/basketball_draft_prediction/: __init__.py  dataset.py  features.py  visualization.py
25605217/basketball_draft_prediction/modeling/: predict.py  train.py
25605217/data/raw/: metadata.csv  sample_submission.csv  test.csv
25605217/models/: catboost_model.cbm  catboost_model_metadata.json  lightgbm_best_model.pkl  lightgbm_model.txt  lightgbm_model_metadata.json  lightgbm_params.json  random_forest_model.pkl  random_forest_model_metadata.json
25605217/nbapredict/: features.py  visualization.py
25605217/nbapredict/modeling/: __init__.py  predict.py
25605217/notebooks/: 36120-25SP-group5-25605217-AT1-experiment-1.ipynb  36120-25SP-group5-25605217-AT1-experiment-2.ipynb  36120-25SP-group5-25605217-AT1-experiment-3.ipynb
25605217/notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
25605217/notebooks/catboost_info/learn/: events.out.tfevents
25605217/notebooks/catboost_info/test/: events.out.tfevents
25605217/notebooks/models/: lightgbm_model.txt  lightgbm_model_metadata.json  lightgbm_params.json
nba_draft_predictor/nba_draft_predictor/: README.md  Untitled.ipynb  pyproject.toml  requirements.txt
nba_draft_predictor/nba_draft_predictor/nba_draft_predictor/: models.py  preprocessing.py  utils.py
nba_draft_predictor/nba_draft_predictor/notebooks/: example_usage.ipynb
nba_draft_predictor/nba_draft_predictor/notebooks/.ipynb_checkpoints/: example_usage-checkpoint.ipynb
nba_draft_predictor/nba_draft_predictor/tests/: test_models.py  test_preprocessing.py
