[project]
name = "nba-draft-prediction"
version = "1.0.0"
description = "this project has been created for the nba_draft_prediction of kaggle competition"
authors = [
    {name = "saifrahmania",email = "89687720+saifrahmania@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (==2.2.2)",
    "jupyterlab (==4.4.4)",
    "scikit-learn (==1.5.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
