[tool.poetry]
name = "nbapredict"
version = "1.0.0"
description = "NBA Draft Prediction using Machine Learning - A comprehensive package for predicting basketball draft prospects"
package-mode = true
authors = ["Zhiyuan Zhao <25605217@student.uts.edu.au>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/tooichitake/36120-AT1-Group5"
repository = "https://github.com/tooichitake/36120-AT1-Group5"
keywords = ["nba", "machine-learning", "sports-analytics", "basketball", "draft-prediction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
packages = [{include = "nbapredict"}]
include = [
    "models/*.pkl",
    "models/*.txt",
    "models/*.cbm",
    "models/*.json"
]

[tool.poetry.dependencies]
python = "==3.11.4"
scikit-learn = "1.5.1"
pandas = "2.2.2"
jupyterlab = "4.2.3"
joblib = "1.4.2"
xgboost = "2.1.0"
hyperopt = "0.2.7"
lightgbm = "4.4.0"
lime = "0.2.0.1"
wandb = "0.17.4"
optuna-integration = "^4.4.0"
seaborn = "^0.13.2"
optuna = "^4.4.0"
catboost = "^1.2.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
