[tool.poetry]
name = "nba_draft_predictor"
version = "0.1.0"
description = "NBA Draft Prediction Package"
authors = ["Saifur"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
xgboost = "^2.1.0"
lightgbm = "^4.4.0"
lime = "^0.2.0.1"
joblib = "^1.4.2"
jupyterlab = "^4.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
